fixed alignment of total amount

--- a/app/assets/stylesheets/donations.scss
+++ b/app/assets/stylesheets/donations.scss
@@ -126,6 +126,7 @@ img.lock{
 #div_5aaa_4{
 	color: #ffffff; 
 	float: right; 
+	margin-right: -7.8%;
 	font-size: 25px; 
 	font-style: bold;
 }
